Fixed weird archive page layout bug

--- a/site/web/app/themes/sage/resources/assets/styles/layouts/_article-grid.scss
+++ b/site/web/app/themes/sage/resources/assets/styles/layouts/_article-grid.scss
@@ -1,6 +1,7 @@
 .article-grid {
 	display: flex;
 	justify-content: space-between;
+	width: 100%;
 
 	flex-wrap: wrap;
 
